--- a/Qua-giang-sinh.html
+++ b/Qua-giang-sinh.html
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="box-content" >
-                        <audio id="Audio2" preload="auto" >
+                        <audio id="Audio2" loop preload="auto" >
                             <source src="Silent night.mp3" type="audio/mp3">
                         </audio>
 
@@ -91,9 +91,9 @@
                                     <p id="text1">Giáng sinh 2024</p>
                                 </div>
                                 <div class="text2">
-                                    <h2 id="text2">Chúc mừng Giáng Sinh! Mùa lễ này, hãy bên nhau chia sẻ niềm vui và tình thương. Chúng ta có thể tận hưởng những khoảnh khắc ấm áp và ý nghĩa bên gia đình và bạn bè. Hy vọng rằng mỗi chiếc đèn trang trí và hương thơm của cây thông sẽ mang lại không khí lễ hội, làm cho mỗi khoảnh khắc trở nên đặc biệt.
+                                    <h2 id="text2">Mùa đông đến rồi! Mọi người thường nói Tháng 12 là mùa đẹp nhất trong năm bởi có sự kết hợp của không khí se lạnh, đường phố được trang trí rực rỡ, ánh đèn lung linh, ấm áp.
                                     </h2>
-                                    <h2 id="text3">Chúc bạn và những người yêu quý có một mùa Giáng Sinh tràn ngập tình thương và hạnh phúc. Mời bạn tận hưởng những giây phút ấm áp, để những ước mơ thành sự thật và tình bạn mãi mãi trường tồn. Mừng Giáng Sinh và Chúc năm mới đầy niềm vui và thành công!
+                                    <h2 id="text3">Chúc chị đêm Giáng sinh vui vẻ, ấm áp và hạnh phúc bên cạnh những người yêu thương chị và những người chị yêu thương.Merry Merry Christmas!!
                                     </h2>
                                 </div>
                             </div>
@@ -122,6 +122,7 @@
                         <div class="image-santa-content">
                             <img src="image/santa1.png" alt="">
                         </div>
+                        
                     </div>
                     <div class="shadow-boxGift">
                     </div>
@@ -276,7 +277,7 @@
 
 
 
-   
+ 
 </body>
 <script src="app.js"></script>
 
